syntax = "proto3";

import "scalapb/scalapb.proto";
import "public.proto";

option (scalapb.options) = {
  scope: FILE
  package_name: "com.stoufexis.raft.kvstore.proto.internal"
  no_default_values_in_constructor: true
  preserve_unknown_fields: false
  enum_value_naming: CAMEL_CASE
  enum_strip_prefix: false
  scala3_sources: true
};


service Raft {
  rpc requestVote (RequestVote) returns (VoteResponse) {}
  rpc appendEntries (AppendEntries) returns (AppendResponse) {}
}

message RequestVote {
  string candidateId = 1;
  uint64 term = 2;
  uint64 lastLogIndex = 3;
  uint64 lastLogTerm = 4;
}

message VoteResponse {
  oneof sealed_value {
    Granted granted = 1;
    Rejected rejected = 2;
    VoteTermExpired term_expired = 3;
    VoteIllegalState illegal_state = 4;
  }
}

message Granted {}

message Rejected {}

message VoteTermExpired {
  uint64 term = 1;
}

message VoteIllegalState {
  string state = 1;
}

message AppendEntries {
  string leaderId = 1;
  uint64 term = 2;
  uint64 prevLogIndex = 3;
  uint64 prevLogTerm = 4;
  repeated Command entries = 5;
}

message AppendResponse {
  oneof sealed_value {
    Accepted accepted = 1;
    NotConsistent not_consistent = 2;
    AppendTermExpired term_expired = 3;
    AppendIllegalState illegal_state = 4;
  }
}

message Accepted {}

message NotConsistent {}

message AppendTermExpired {
  uint64 term = 1;
}

message AppendIllegalState {
  string state = 1;
}
